add animation to portfolio page

--- a/index.html
+++ b/index.html
@@ -981,7 +981,7 @@
       </div>
     </div>
 
-    <!-- <a href="#" class="to-top link">
+    <!-- <a href="#" class="to-top link" aria-label>
       <svg class="go-top">
         <use href="./images/icons.svg#icon-top"></use>
       </svg>
